# srm_auto_sentry

./: .gitignore  2277.yaml  22777.yaml  INTEGRATION_GUIDE.md  LAUNCH_CHANGES_SUMMARY.md  LAUNCH_MODIFICATION_NOTES.md  LAUNCH_QUICK_REFERENCE.txt  NAV2_CUSTOM_WAYPOINT_NAVIGATION.md  NAV2_WAYPOINT_TOLERANCE_GUIDE.md  QUICK_REFERENCE.md  README_WAYPOINTS.md  WAYPOINTS_NAVIGATION_GUIDE.md  config_index.md  dark.yaml  directory_structure.txt  dockerfile  fix_ros_env.sh  sc.data  sc.yaml  secret.pgm  secret.yaml  see.gv  start_waypoints_nav.sh
.cache/clangd/index/: CameraParams.h.7DE5350F324377E1.idx  CameraParams.h.A8DF4DAB73D4E517.idx  MvCameraControl.h.652E1A9068E67871.idx  MvCameraControl.h.D332FF6323519ACF.idx  MvErrorDefine.h.34B9358BF0D3C685.idx  MvErrorDefine.h.55B55DEC2752B9C2.idx  PixelType.h.298203AF0388ACAA.idx  PixelType.h.D0E594CE4F84834C.idx  abstract_logger.h.176853FE997F2CF9.idx  abstract_logger.h.786E02D8ECAEDD87.idx  abstract_logger.h.807ED63BECE22886.idx  abstract_logger.h.AC8385D3C860BD4C.idx  action_node.cpp.A9BEDD5D0623E976.idx  action_node.cpp.AB4A973B9CDA9FF9.idx  action_node.cpp.BBA27654210E783A.idx  action_node.h.74DA54BFC6414916.idx  action_node.h.800DA127FC308B59.idx  action_node.h.81C291FB00047494.idx  action_node.h.E79A14D512803A4C.idx  action_test_node.cpp.62BE570E2C998375.idx  action_test_node.cpp.CA31720361F0BB00.idx  action_test_node.cpp.D20968EBA7998793.idx  action_test_node.h.45AD681BFA2004E1.idx  action_test_node.h.6BA7807B087EEE81.idx  action_test_node.h.97C923E26D33D518.idx  adapter.hpp.4031A088E2FF4B86.idx  adapter.hpp.443A823B6937143F.idx  adapter.hpp.9C78F81D864B81C2.idx  aggregate.hpp.2468E7B0D9833111.idx  aggregate.hpp.4B957A5A4D0CE7D8.idx  aggregate.hpp.6217705CC749F67D.idx  all_robot_hp.hpp.D73C9E9D194E3072.idx  all_robot_hp__builder.hpp.29B55DCEA0BD5695.idx  all_robot_hp__struct.hpp.35018AE264705C9A.idx  all_robot_hp__traits.hpp.E3A5CF3BBB7FECA3.idx  always_failure_node.h.19B9433873B4FDB2.idx  always_failure_node.h.C380C2F603D22556.idx  always_failure_node.h.F4C419BD243EEAA7.idx  always_failure_node.h.FC9712667C97637D.idx  always_success_node.h.078E4C777E4F2B6D.idx  (+1084 more)
.devcontainer/: devcontainer.json
install/: local_setup.sh  setup.sh
install/standard_robot_pp_ros2/include/: crc_func.h  debug_for_pb_rm.hpp  packet_typedef.hpp  robot_info.hpp  standard_robot_pp_ros2.hpp
log/: latest_build
src/base_publisher/: CMakeLists.txt  package.xml
src/base_publisher/config/: base_publisher.yaml
src/base_publisher/launch/: base_publisher.launch.py
src/base_publisher/src/: base_publisher_node.cpp
src/pb_rmsimulation/: README.md
src/pb_rmsimulation/src/: directory_structure.txt
src/rm_behavior_tree-master/: README.md  directory_structure.txt
src/rm_behavior_tree-master/rm_behavior_tree/: CMakeLists.txt
src/rm_behavior_tree-master/rm_decision_interfaces/: CMakeLists.txt  publish_script.sh
src/rm_nav_bringup/config/: waypoints_navigator.rviz
src/rm_nav_bringup/launch/: waypoints_navigator.launch.py
src/rm_nav_bringup/scripts/: waypoints_navigator.py  waypoints_test_client.py
src/standard_robot_pp_ros2-master/: README.md  interface_configuration.sh
src/standard_robot_pp_ros2-master/src/game_status_tester/: CMakeLists.txt  package.xml
src/standard_robot_pp_ros2-master/src/game_status_tester/launch/: start_test.launch.py
src/standard_robot_pp_ros2-master/src/game_status_tester/src/: test_node.cpp
src/standard_robot_pp_ros2-master/src/standard_robot_pp_ros2/: CMakeLists.txt  package.xml
src/standard_robot_pp_ros2-master/src/standard_robot_pp_ros2/config/: standard_robot_pp_ros2.yaml
src/standard_robot_pp_ros2-master/src/standard_robot_pp_ros2/include/: crc_func.h  packet_typedef.hpp  robot_info.hpp  standard_robot_pp_ros2.hpp
src/standard_robot_pp_ros2-master/src/standard_robot_pp_ros2/launch/: standard_robot_pp_ros2.launch.py
src/standard_robot_pp_ros2-master/src/standard_robot_pp_ros2/src/: crc_func.c  standard_robot_pp_ros2.cpp
src/transport_drivers/udp_msgs/: CMakeLists.txt  package.xml
(+1818 files in other folders)
